# aya-flake-template

./: .dir-locals.el  Cargo.toml  README.md
.vim/: coc-settings.json
aya-flake-template/: Cargo.toml
aya-flake-template-common/: Cargo.toml
aya-flake-template-ebpf/: Cargo.toml
aya-flake-template-ebpf/src/: main.rs
aya-flake-template/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
